force-app/main/default/objects/Credit_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account (Link)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Requests</relationshipLabel>
    <relationshipName>Credit_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>