force-app/main/default/objects/Credit_Request__c/fields/Account_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Legal_Name__c</fullName>
    <label>Account Legal Name (Please Enter)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>