force-app/main/default/objects/Credit_Request__c/fields/Additional_Information_Needed__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>See Approval Comments below.</description>
    <inlineHelpText>See Approval Comments below.</inlineHelpText>
    <label>Additional Information Needed</label>
    <type>Checkbox</type>
</CustomField>