force-app/main/default/objects/Credit_Request__c/fields/AssignedTo_Analyst__c.field-meta.xml
<CustomField>
    <fullName>AssignedTo_Analyst__c</fullName>
    <formula>IF( Credit_Analyst__r.Id = $User.Id , 1, 0)</formula>
    <label>AssignedTo$Analyst</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>