force-app/main/default/objects/Credit_Request__c/fields/Auto_Submit_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Auto_Submit_for_Approval__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this box is checked, your request will be automatically locked and routed to the credit team for approval. If unchecked, you will have to manually submit the request after saving.</description>
    <inlineHelpText>If this box is checked, your request will be automatically locked and routed to the credit team for approval. If unchecked, you will have to manually submit the request after saving.</inlineHelpText>
    <label>Auto-Submit for Approval</label>
    <type>Checkbox</type>
</CustomField>