force-app/main/default/objects/Credit_Request__c/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <description>Gas, etc.</description>
    <inlineHelpText>Gas, etc.</inlineHelpText>
    <label>Business Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>