force-app/main/default/objects/Credit_Request__c/fields/Consultant_Contact__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultant Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Credit Requests</relationshipLabel>
    <relationshipName>Credit_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>