force-app/main/default/objects/Credit_Request__c/fields/Consultant_Fax__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Fax__c</fullName>
    <label>Consultant Fax</label>
    <type>Phone</type>
</CustomField>