force-app/main/default/objects/Credit_Request__c/fields/Consultant_Phone__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Phone__c</fullName>
    <label>Consultant Phone</label>
    <type>Phone</type>
</CustomField>