force-app/main/default/objects/Credit_Request__c/fields/Corporate_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Address_Country__c</fullName>
    <label>Corporate Address Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>