force-app/main/default/objects/Credit_Request__c/fields/Corporate_Address_State__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Address_State__c</fullName>
    <label>Corporate Address State/Province</label>
    <length>50</length>
    <type>Text</type>
</CustomField>