force-app/main/default/objects/Credit_Request__c/fields/Corporate_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Address_Street__c</fullName>
    <label>Corporate Address Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>