force-app/main/default/objects/Credit_Request__c/fields/Corporate_Address_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Address_Zip_Postal_Code__c</fullName>
    <label>Corporate Address Zip/Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>