force-app/main/default/objects/Credit_Request__c/fields/Credit_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Credit_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Credit_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>