force-app/main/default/objects/Credit_Request__c/fields/Credit_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Credit_Contact_Email__c</fullName>
    <label>Credit Contact Email</label>
    <type>Email</type>
</CustomField>