force-app/main/default/objects/Credit_Request__c/fields/Credit_Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>Credit_Contact_Fax__c</fullName>
    <label>Credit Contact Fax</label>
    <type>Phone</type>
</CustomField>