force-app/main/default/objects/Credit_Request__c/fields/Credit_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Credit_Contact_Name__c</fullName>
    <label>Credit Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>