force-app/main/default/objects/Credit_Request__c/fields/Credit_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Credit_Contact_Phone__c</fullName>
    <label>Credit Contact Phone</label>
    <type>Phone</type>
</CustomField>