force-app/main/default/objects/Credit_Request__c/fields/Credit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Credit_Notes__c</fullName>
    <label>Credit Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>