force-app/main/default/objects/Credit_Request__c/fields/Credit_Price__c.field-meta.xml
<CustomField>
    <fullName>Credit_Price__c</fullName>
    <label>Credit Price</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>