force-app/main/default/objects/Credit_Request__c/fields/Date_Submitted_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted_for_Approval__c</fullName>
    <label>Date Submitted for Approval</label>
    <type>DateTime</type>
</CustomField>