force-app/main/default/objects/Credit_Request__c/fields/Estimated_60_Day_Credit_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Estimated_60_Day_Credit_Exposure__c</fullName>
    <label>Estimated 60 Day Credit Exposure BAD</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>