force-app/main/default/objects/Credit_Request__c/fields/Estimated_60_Day_Credit_Exposure_FORMULA__c.field-meta.xml
<CustomField>
    <fullName>Estimated_60_Day_Credit_Exposure_FORMULA__c</fullName>
    <description>Peak Daily Volume * Credit Price * 60 Days</description>
    <formula>Peak_Daily_Volume__c * Credit_Price__c *60</formula>
    <inlineHelpText>Peak Daily Volume * Credit Price * 60 Days</inlineHelpText>
    <label>Estimated 60 Day Credit Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>