force-app/main/default/objects/Credit_Request__c/fields/Estimated_60_Day_Credit_Exposure_New__c.field-meta.xml
<CustomField>
    <fullName>Estimated_60_Day_Credit_Exposure_New__c</fullName>
    <formula>(Peak_Monthly_Volume__c  / 30 )
* 70 * Credit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated 70 Day Credit Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>