force-app/main/default/objects/Credit_Request__c/fields/Estimated_term_days__c.field-meta.xml
<CustomField>
    <fullName>Estimated_term_days__c</fullName>
    <label>Estimated Term (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>