force-app/main/default/objects/Credit_Request__c/fields/Estimated_Term_months__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Term_months__c</fullName>
    <label>Estimated Term (months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>