force-app/main/default/objects/Credit_Request__c/fields/Euhler_RFC__c.field-meta.xml
<CustomField>
    <fullName>Euhler_RFC__c</fullName>
    <description>Number used in Safari for insured accounts</description>
    <inlineHelpText>Number used in Safari for insured accounts</inlineHelpText>
    <label>Euhler RFC #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>