force-app/main/default/objects/Credit_Request__c/fields/Exposure_Days__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Days__c</fullName>
    <defaultValue>70</defaultValue>
    <label>Exposure Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>