force-app/main/default/objects/Credit_Request__c/fields/Fixed_Price_Deal__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Price_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you are requesting credit approval for a fixed price deal.</description>
    <inlineHelpText>Check this box if you are requesting credit approval for a fixed price deal.</inlineHelpText>
    <label>Fixed Price Deal</label>
    <type>Checkbox</type>
</CustomField>