force-app/main/default/objects/Credit_Request__c/fields/Headquarters_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Headquarters_Street_Address__c</fullName>
    <label>Headquarters/Street Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>