force-app/main/default/objects/Credit_Request__c/fields/HOU_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>HOU_Credit_Limit__c</fullName>
    <label>HOU Credit Limit</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>