force-app/main/default/objects/Credit_Request__c/fields/Last_Approval_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Approval_Activity__c</fullName>
    <label>Last Approval Activity</label>
    <type>DateTime</type>
</CustomField>