force-app/main/default/objects/Credit_Request__c/fields/Last_Modified_Age__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Age__c</fullName>
    <description>how many hours since the request has been modified</description>
    <formula>now()- LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>how many hours since the request has been modified</inlineHelpText>
    <label>Last Modified Age (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>