force-app/main/default/objects/Credit_Request__c/fields/LDC_Name__c.field-meta.xml
<CustomField>
    <fullName>LDC_Name__c</fullName>
    <formula>Opportunity__r.LDC2__r.Name</formula>
    <label>LDC Name</label>
    <type>Text</type>
</CustomField>