force-app/main/default/objects/Credit_Request__c/fields/Lock_Months_Approved__c.field-meta.xml
<CustomField>
    <fullName>Lock_Months_Approved__c</fullName>
    <description>For fixed price deals, how many months is this customer approved to lock for?</description>
    <inlineHelpText>For fixed price deals, how many months is this customer approved to lock for?</inlineHelpText>
    <label>Lock Months Approved</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>