force-app/main/default/objects/Credit_Request__c/fields/Long_Credit_Name__c.field-meta.xml
<CustomField>
    <fullName>Long_Credit_Name__c</fullName>
    <formula>&#39;Acct: &#39; &amp; Account__r.Name &amp; &#39;, Opty: &#39; &amp;Opportunity__r.Name  &amp; &#39;, StartDate: &#39; &amp; TEXT(Estimated_Start_Date__c) &amp; &#39;, TotalLimit: &#39; &amp; TEXT(Credit_Limit__c)</formula>
    <label>Long Credit Name</label>
    <type>Text</type>
</CustomField>