force-app/main/default/objects/Credit_Request__c/fields/Mailing_Service_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Service_Address__c</fullName>
    <label>Service Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>