force-app/main/default/objects/Credit_Request__c/fields/Mailing_Service_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Service_City__c</fullName>
    <label>Service City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>