force-app/main/default/objects/Credit_Request__c/fields/Mailing_Service_City_State_Zip__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Service_City_State_Zip__c</fullName>
    <label>Service City, State, Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>