force-app/main/default/objects/Credit_Request__c/fields/Mailing_Service_State__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Service_State__c</fullName>
    <label>Service State</label>
    <length>10</length>
    <type>Text</type>
</CustomField>