force-app/main/default/objects/Credit_Request__c/fields/Mailing_Service_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Service_Zip_Code__c</fullName>
    <label>Service Zip Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>