force-app/main/default/objects/Credit_Request__c/fields/Marketing_Representative__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Representative</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Marketing representative must be a standard user.</errorMessage>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Credit_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>