force-app/main/default/objects/Credit_Request__c/fields/One_Time_Project__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the exposure amount for this credit request applies to a one-time project.</description>
    <inlineHelpText>If checked, the exposure amount for this credit request applies to a one-time project.</inlineHelpText>
    <label>One-Time Project</label>
    <type>Checkbox</type>
</CustomField>