force-app/main/default/objects/Credit_Request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Credit Requests</relationshipLabel>
    <relationshipName>Credit_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>