force-app/main/default/objects/Credit_Request__c/fields/Peak_Daily_Volume__c.field-meta.xml
<CustomField>
    <fullName>Peak_Daily_Volume__c</fullName>
    <description>Daily volume in Dth or kWh</description>
    <inlineHelpText>Daily volume in Dth or kWh</inlineHelpText>
    <label>Peak Daily Volume</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>