force-app/main/default/objects/Credit_Request__c/fields/Peak_Monthly_Volume__c.field-meta.xml
<CustomField>
    <fullName>Peak_Monthly_Volume__c</fullName>
    <inlineHelpText>the combined highest monthly volumes for all locations assigned to this request</inlineHelpText>
    <label>Peak Monthly Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>