force-app/main/default/objects/Credit_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>is this a request for credit limit approval/review or for fixed price approval?</description>
    <inlineHelpText>is this a request for credit limit approval/review or for fixed price approval?</inlineHelpText>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit Limit Approval</fullName>
            </value>
            <value>
                <fullName>Fixed Price Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>