force-app/main/default/objects/Credit_Request__c/fields/Sales_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sales_Notes__c</fullName>
    <description>This field should be used for any notes that the sales rep has for the credit analyst.</description>
    <inlineHelpText>This field should be used for any notes that the sales rep has for the credit analyst.</inlineHelpText>
    <label>Sales Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>