force-app/main/default/objects/Credit_Request__c/fields/Search_Code__c.field-meta.xml
<CustomField>
    <fullName>Search_Code__c</fullName>
    <description>code used for screen to show all matching records, essentially creating a drop down</description>
    <formula>&#39;all&#39;</formula>
    <label>Search Code</label>
    <type>Text</type>
</CustomField>