force-app/main/default/objects/Credit_Request__c/fields/Security_Amount__c.field-meta.xml
<CustomField>
    <fullName>Security_Amount__c</fullName>
    <label>Security Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>