force-app/main/default/objects/Credit_Request__c/fields/Security_Required__c.field-meta.xml
<CustomField>
    <fullName>Security_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Requires cash deposit, letter of credit, surety bond, or prepayment</inlineHelpText>
    <label>Security Required</label>
    <type>Checkbox</type>
</CustomField>