force-app/main/default/objects/Credit_Request__c/fields/Security_Required_Message__c.field-meta.xml
<CustomField>
    <fullName>Security_Required_Message__c</fullName>
    <formula>IF(NOT(ISBLANK( Security_Amount__c )),&quot;*** Security is required in the amount of $&quot; + TEXT(Security_Amount__c) + &quot; and can be provided in the form of a cash deposit, letter of credit, surety bond, or prepayment.  Prepayment requires John Wacker&#39;s approval. ***&quot;, TEXT(Credit_Request_Status__c))</formula>
    <label>Security Required Message</label>
    <type>Text</type>
</CustomField>