force-app/main/default/objects/Credit_Request__c/fields/SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code__c</fullName>
    <label>SIC Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>