force-app/main/default/objects/Credit_Request__c/fields/STL_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>STL_Credit_Limit__c</fullName>
    <label>STL Credit Limit</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>