force-app/main/default/objects/Credit_Request__c/fields/Term_Volume__c.field-meta.xml
<CustomField>
    <fullName>Term_Volume__c</fullName>
    <description>Term volume in Dth or kWh</description>
    <inlineHelpText>Term volume in Dth or kWh</inlineHelpText>
    <label>Term Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>