force-app/main/default/objects/Credit_Request__c/fields/Type_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Business__c</fullName>
    <description>New or Existing?</description>
    <inlineHelpText>New or Existing?</inlineHelpText>
    <label>Type of Business</label>
    <length>100</length>
    <type>Text</type>
</CustomField>