force-app/main/default/objects/Credit_Request__c/recordTypes/Credit_Limit_Approval.recordType-meta.xml
<RecordType>
    <fullName>Credit_Limit_Approval</fullName>
    <active>true</active>
    <label>Credit Limit Approval</label>
</RecordType>