force-app/main/default/objects/Credit_Request__c/recordTypes/MES_Credit_Request.recordType-meta.xml
<RecordType>
    <fullName>MES_Credit_Request</fullName>
    <active>true</active>
    <label>MES Credit Request</label>
</RecordType>