force-app/main/default/objects/Credit_Request__c/recordTypes/Standard_CES_Credit_Request.recordType-meta.xml
<RecordType>
    <fullName>Standard_CES_Credit_Request</fullName>
    <active>true</active>
    <label>Standard CES Credit Request</label>
</RecordType>