force-app/main/default/objects/Credit_Request__c/validationRules/Additional_Info_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Additional_Info_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  Additional_Information_Needed__c =TRUE,  ISBLANK(Credit_Notes__c ))</errorConditionFormula>
    <errorDisplayField>Credit_Notes__c</errorDisplayField>
    <errorMessage>Credit01: Please describe what additional information should be included.</errorMessage>
</ValidationRule>