force-app/main/default/objects/Credit_Request__c/validationRules/Changes_to_Legal_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Changes_to_Legal_Name</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISCHANGED( Account_Legal_Name__c ), ISBLANK( Credit_Notes__c ))</errorConditionFormula>
    <errorDisplayField>Account_Legal_Name__c</errorDisplayField>
    <errorMessage>Credit02: Please use the &quot;Credit Notes&quot; field to describe any changes made to the legal name.</errorMessage>
</ValidationRule>