force-app/main/default/objects/Credit_Request__c/validationRules/Euler_required_for_insurace.validationRule-meta.xml
<ValidationRule>
    <fullName>Euler_required_for_insurace</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Credit_Type__c, &quot;Insurance Coverage&quot;) ,
 ISBLANK( Euhler_RFC__c ) 
)</errorConditionFormula>
    <errorDisplayField>Euhler_RFC__c</errorDisplayField>
    <errorMessage>Credit05: Euhler RFC# is required for insurance coverage.</errorMessage>
</ValidationRule>