force-app/main/default/objects/Credit_Request__c/validationRules/Security_Amount_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Security_Amount_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(   
OR(
ISPICKVAL(Credit_Type__c, &quot;Deposit&quot;) ,
ISPICKVAL(Credit_Type__c, &quot;Letter of Credit&quot;) ,
ISPICKVAL(Credit_Type__c, &quot;Surety Bond&quot;) ),

  ISBLANK( Security_Amount__c) 
)</errorConditionFormula>
    <errorDisplayField>Security_Amount__c</errorDisplayField>
    <errorMessage>Credit04: If Credit Type is Deposit, Letter of Credit, or Surety Bond, a Security Amount is required.  Credit Limit should also be set to $0.</errorMessage>
</ValidationRule>