force-app/main/default/objects/Credit_Request__c/validationRules/Term_and_Volume_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Term_and_Volume_Required</fullName>
    <active>false</active>
    <errorConditionFormula>OR( ISBLANK( Term_Volume__c), ISBLANK (Estimated_Term_months__c ))</errorConditionFormula>
    <errorMessage>Credit03: BOTH annual volume and estimated term must be populated for proper approval.</errorMessage>
</ValidationRule>